k8s/user-service-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
      tier: backend
  template:
    metadata:
      labels:
        app: user-service
        tier: backend
    spec:
      containers:
        - name: user-service-container
          image: inyoung155/stockroom-user-service
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: user-service-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: user-service
    tier: backend
